--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</header>
 		<div class="container">
 			<ul class="actions special">
-				<li><a href="#one" class="button primary scrolly">Iniciar</a></li>
+				<li><a href="#one" class="button primary scrolly">Inicciar</a></li>
 			</ul>
 		</div>
 	</section>
