--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
 
-	<title>Redware Trail</title>
+	<title>Mateus Backhaus - Dev</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -148,7 +148,7 @@
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/mateusbackhaus" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 				<li><a href="https://github.com/matbks" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
-				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.instagram.com/backhausmat/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
