--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
 
-	<title>Mateus Backhaus - Dev</title>
+	<title>Mateus Backhaus</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,68 +50,93 @@
 			</div>
 		</div>
 
-		<a href="#two" class="goto-next scrolly">Next</a>
+		<a href="#career" class="goto-next scrolly">Next</a>
 		</div>
 	</section>
+
+
 
 	<!-- Two -->
-	<section id="two" class="main special">
+	<section id="career" class="main special">
+
 		<div class="container">
-			<span class="image fit primary"><img src="images/bg2.jpg" alt="" /></span>
+
+			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
-					<h2>Academia Abap</h2>
+					<p></p>
+					<h2>Career</h2>
 				</header>
-				<img src="images/acad.jpg" width="75%" height="75%" />
-				<p>Feito pensando no que você precisará de verdade para desenvolver as demandas do dia-a-dia com um
-					desempenho competitivo no mercado de trabalho.</p>
 
-				<a href="#three" class="goto-next scrolly">Next</a>
-			</div>
+			
+			<a href="#projects" class="goto-next scrolly">Next</a>
+
 		</div>
 	</section>
+
+
 
 	<!-- Three -->
-	<section id="three" class="main special">
+	<section id="projects" class="main special">
 		<div class="container">
+
 			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
 					<p></p>
-					<h2>Introdução ao SAP</h2>
+					<h2>Projects</h2>
 				</header>
+
+			<!-- Slideshow container -->
+			<div class="slideshow-container">
+
+				<!-- Full-width images with number and caption text -->
+				<div class="mySlides fade">						
+					<div class="numbertext">1 / 3</div>
+					<img src="images/pic_face_rec.jpg" width="600px" height="350px">					
+					<!-- <div class="sliderText">Registering presence through face recognition in SAP</div>					 -->
+					<p>Registering presence through face recognition in SAP</p>
+					</div>
 				
 
-				<a href="#four" class="goto-next scrolly">Next</a>
+				<div class="mySlides fade">
+					<div class="numbertext">2 / 3</div>
+					<a href="http://www.google.com"><img src="images/rfid_tag.jpg" width="600px" height="350px"></a>
+					<p>Registering RFID Tag readings in SAP with esp32</p>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">3 / 3</div>
+					<img src="images/fiori_app.jpg" width="600px" height="350px">
+					<p>Creating three fiori apps</p>
+				</div>
+
+				<!-- Next and previous buttons -->
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+				
 			</div>
-		</div>
-	</section>
+			<br>
 
-
-	<!-- Four -->
-	<section id="four" class="main special">
-		<div class="container">
-			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
-			<div class="content">
-				<header class="major">
-					<p></p>
-					<h2>Instalação do SAP GUI</h2>
-				</header>
-
-
-				<a href="#five" class="goto-next scrolly">Next</a>
+			<!-- The dots/circles -->
+			<div style="text-align:center">
+				<span class="dot" onclick="currentSlide(1)"></span>
+				<span class="dot" onclick="currentSlide(2)"></span>
+				<span class="dot" onclick="currentSlide(3)"></span>
 			</div>
+			<a href="#curriculum" class="goto-next scrolly">Next</a>
+
 		</div>
 	</section>
 
 	<!-- Five -->
-	<section id="five" class="main special">
+	<section id="curriculum" class="main special">
 		<div class="container">
 			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
 					<p></p>
-					<h2>Instalação do Eclipse IDE</h2>
+					<h2>Curriculum</h2>
 				</header>
 
 
@@ -120,15 +145,12 @@
 		</div>
 	</section>
 
-
-	
-
 	<section id="footer">
 		<div class="container">
 			<header class="major">
 				<h2>Get in touch</h2>
 			</header>
-			<form method="post" action="#">
+			<form method="post" action="mailto:mateus.bks@hotmail.com">
 				<div class="row gtr-uniform">
 					<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" />
 					</div>
@@ -146,9 +168,12 @@
 		</div>
 		<footer>
 			<ul class="icons">
-				<li><a href="https://www.linkedin.com/in/mateusbackhaus" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-				<li><a href="https://github.com/matbks" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
-				<li><a href="https://www.instagram.com/backhausmat/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.linkedin.com/in/mateusbackhaus" class="icon brands alt fa-linkedin"><span
+							class="label">Linkedin</span></a></li>
+				<li><a href="https://github.com/matbks" class="icon brands alt fa-github"><span
+							class="label">Github</span></a></li>
+				<li><a href="https://www.instagram.com/backhausmat/" class="icon brands alt fa-instagram"><span
+							class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
@@ -166,6 +191,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/custom.js" ></script>
 
 </body>
 
