--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 				<header class="major">
 					<h2>About me</h2>
 				</header>
-				<a href="#two"><img id="academy" src="images/career.png" width="20%" height="20%" />
+				<a href="#career" class="goto-next- scrolly"><img id="academy" src="images/career.png" width="20%" height="20%" />
 					<p id="academyText">Career</p>
 				</a>
-				<a href="#tree"><img id="academy" src="images/projects.png" width="20%" height="20%" />
+				<a href="#projects"><img id="academy" src="images/projects.png" width="20%" height="20%" />
 					<p id="academyText">Projects</p>
 				</a>
-				<a href="#four"><img id="academy" src="images/curriculum.png" width="20%" height="20%" />
+				<a href="#curriculum"><img id="academy" src="images/curriculum.png" width="20%" height="20%" />
 					<p id="academyText">Curriculum</p>
 				</a>
 			</div>
@@ -61,7 +61,7 @@
 
 		<div class="container">
 
-			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
+			<span class="image fit primary"><img src="images/bg2.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
 					<p></p>
@@ -132,7 +132,7 @@
 	<!-- Five -->
 	<section id="curriculum" class="main special">
 		<div class="container">
-			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
+			<span class="image fit primary"><img src="images/bg2.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
 					<p></p>
@@ -140,7 +140,7 @@
 				</header>
 
 
-				<a href="#six" class="goto-next scrolly">Next</a>
+				<a href="#footer" class="goto-next scrolly">Next</a>
 			</div>
 		</div>
 	</section>
@@ -174,11 +174,11 @@
 							class="label">Github</span></a></li>
 				<li><a href="https://www.instagram.com/backhausmat/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				<!-- <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li> -->
 			</ul>
 			<ul class="copyright">
 				<li>&copy; All rights reserved</li>
-				<li>Design: <a href="http://html5up.net">Mateus Backhaus</a></li>
+				<li>Design: <a href="#">Mateus Backhaus</a></li>
 			</ul>
 		</footer>
 	</section>
