--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header class="major">
-			<img id="brand" src="images/profile.png" width="12%" height="12%" />
+			<img id="brand" src="images/profile.png" style="max-width: 300px; max-height: 300px;"/>
 			<h1>Mateus Backhaus</h1>
 			<p>Software Developer</p>
 		</header>
@@ -38,13 +38,13 @@
 				<header class="major">
 					<h2>About me</h2>
 				</header>
-				<a href="#career" class="goto-next- scrolly"><img id="academy" src="images/career.png" width="20%" height="20%" />
+				<a href="#career" class="goto-next- scrolly"><img class="menuImages" id="academy" src="images/career.png" width="20%" height="20%" />
 					<p id="academyText">Career</p>
 				</a>
-				<a href="#projects"><img id="academy" src="images/projects.png" width="20%" height="20%" />
+				<a href="#projects"><img class="menuImages" id="academy" src="images/projects.png" width="20%" height="20%" />
 					<p id="academyText">Projects</p>
 				</a>
-				<a href="#curriculum"><img id="academy" src="images/curriculum.png" width="20%" height="20%" />
+				<a href="#curriculum"><img class="menuImages" id="academy" src="images/curriculum.png" width="20%" height="20%" />
 					<p id="academyText">Curriculum</p>
 				</a>
 			</div>
@@ -80,7 +80,7 @@
 	<section id="projects" class="main special">
 		<div class="container">
 
-			<span class="image fit primary"><img src="images/bg.jpg" alt="" /></span>
+			<span class="image fit primary"><img src="images/bg.jpg" id="bgimg" alt="" /></span>
 			<div class="content">
 				<header class="major">
 					<p></p>
@@ -93,7 +93,7 @@
 				<!-- Full-width images with number and caption text -->
 				<div class="mySlides fade">						
 					<div class="numbertext">1 / 3</div>
-					<img src="images/pic_face_rec.jpg" width="600px" height="350px">					
+					<img class="projectImages" src="images/pic_face_rec.jpg" width="450px" height="300px">					
 					<!-- <div class="sliderText">Registering presence through face recognition in SAP</div>					 -->
 					<p>Registering presence through face recognition in SAP</p>
 					</div>
@@ -101,14 +101,14 @@
 
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 3</div>
-					<a href="http://www.google.com"><img src="images/rfid_tag.jpg" width="600px" height="350px"></a>
+					<a href="http://www.google.com"><img class="projectImages" src="images/rfid_tag.jpg" width="450px" height="300px"></a>
 					<p>Registering RFID Tag readings in SAP with esp32</p>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">3 / 3</div>
-					<img src="images/fiori_app.jpg" width="600px" height="350px">
-					<p>Creating three fiori apps</p>
+					<img class="projectImages" src="images/fiori_app.jpg" width="450px" height="300px">
+					<p>Creating three fiori apps for managing a mechanic shop</p>
 				</div>
 
 				<!-- Next and previous buttons -->
