--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 					<h2>About me</h2>
 				</header>
 				<a href="#career" class="goto-next- scrolly"><img class="menuImages" id="academy" src="images/career.png" width="20%" height="20%" />
-					<p id="academyText">Career</p>
+					<p id="menuText">Career</p>
 				</a>
 				<a href="#projects"><img class="menuImages" id="academy" src="images/projects.png" width="20%" height="20%" />
-					<p id="academyText">Projects</p>
+					<p id="menuText">Projects</p>
 				</a>
 				<a href="#curriculum"><img class="menuImages" id="academy" src="images/curriculum.png" width="20%" height="20%" />
-					<p id="academyText">Curriculum</p>
+					<p id="menuText">Curriculum</p>
 				</a>
 			</div>
 		</div>
@@ -66,14 +66,10 @@
 				<header class="major">
 					<p></p>
 					<h2>Career</h2>
-				</header>
-
-			
+				</header>			
 			<a href="#projects" class="goto-next scrolly">Next</a>
-
 		</div>
 	</section>
-
 
 
 	<!-- Three -->
@@ -95,20 +91,20 @@
 					<div class="numbertext">1 / 3</div>
 					<img class="projectImages" src="images/pic_face_rec.jpg" width="450px" height="300px">					
 					<!-- <div class="sliderText">Registering presence through face recognition in SAP</div>					 -->
-					<p>Registering presence through face recognition in SAP</p>
+					<p id="sliderText">Registering presence through face recognition in SAP</p>
 					</div>
 				
 
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 3</div>
 					<a href="http://www.google.com"><img class="projectImages" src="images/rfid_tag.jpg" width="450px" height="300px"></a>
-					<p>Registering RFID Tag readings in SAP with esp32</p>
+					<p id="sliderText">Registering RFID Tag readings in SAP with esp32</p>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">3 / 3</div>
 					<img class="projectImages" src="images/fiori_app.jpg" width="450px" height="300px">
-					<p>Creating three fiori apps for managing a mechanic shop</p>
+					<p id="sliderText">Creating three fiori apps</p>
 				</div>
 
 				<!-- Next and previous buttons -->
