--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<header class="major">
 					<h2>About me</h2>
 				</header>
-				<a href="#career" class="goto-next- scrolly"><img class="menuImages" id="academy" src="images/career.png" width="20%" height="20%" />
+				<a href="#career" class="menuImages"><img class="menuImages" id="academy" src="images/career.png" width="20%" height="20%" />
 					<p id="menuText">Career</p>
 				</a>
 				<a href="#projects"><img class="menuImages" id="academy" src="images/projects.png" width="20%" height="20%" />
