--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="containerT left">
 					  <div class="contentT">
 						<h2>2009</h2>
-						<p>Started studying Eletronics and got the certificate in 2013. </p>
+						<p>Started studying Eletronics and got the certificate in 2013.</p>
 					  </div>
 					</div>
 					<div class="containerT right">
@@ -85,25 +85,25 @@
 					<div class="containerT left">
 					  <div class="contentT">
 						<h2>2012</h2>
-						<p>Got a job at Novus - Produtos Eletrônicos as R&D/Eletronics Intern.</p>
+						<p>Got an internship at Novus - Produtos Eletrônicos in R&D/Eletronics for about a year. Working with the Engenieering team inspired me to keep studying technolgy development.</p>
 					  </div>
 					</div>
 					<div class="containerT right">
 					  <div class="contentT">
-						<h2>2012</h2>
-						<p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+						<h2>2014</h2>
+						<p>Started working as Biomedical Equipment Technician providing technical support for two hospitals ultil 2021. Great enverioment to learn how to work under pressure and get sense of responsibility. </p>
 					  </div>
 					</div>
 					<div class="containerT left">
 					  <div class="contentT">
-						<h2>2011</h2>
-						<p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+						<h2>2018</h2>
+						<p>Got certificated in Lean Six Sigma Green Belt after learning methods and tools to manage processes and delivering a project which consisted of analysing, controlling and maintaning a real process in the company.</p>
 					  </div>
 					</div>
 					<div class="containerT right">
 					  <div class="contentT">
-						<h2>2007</h2>
-						<p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+						<h2>2021</h2>
+						<p>Decided to chase my vocation in Technology Development I entered the SAP business, becoming a Full Stack SAP Developer, with one goal: studying technologies that improve companies processes and efficiency.</p>
 					  </div>
 					</div>
 				  </div>
@@ -117,11 +117,12 @@
 	<section id="projects" class="main special">
 		<div class="container">
 
+
 			<span class="image fit primary"><img src="images/bg.jpg" id="bgimg" alt="" /></span>
 			<div class="content">
-				<header class="major">
-					<p></p>
+				<header class="major">				
 					<h2>Projects</h2>
+					<p>Developing technology is more than the career i chose, it's my hobby. Here i share some of the projects i've been lately working on. </p>
 				</header>
 
 			<!-- Slideshow container -->
