--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<div class="content">
 				<header class="major">				
 					<h2>Projects</h2>
-					<p>Developing technology is more than the career i chose, it's my hobby. Here i share some of the projects i've been lately working on. </p>
+					<p>More than a profession Developing technology is my hobby. Here I share some of the projects i've been lately working on. </p>
 				</header>
 
 			<!-- Slideshow container -->
@@ -170,10 +170,15 @@
 		<div class="container">
 			<span class="image fit primary"><img src="images/bg2.jpg" alt="" /></span>
 			<div class="content">
-				<header class="major">
-					<p></p>
+				<header class="major"></header>
 					<h2>Curriculum</h2>
 				</header>
+				<ul class="actions special">
+					<li><a href="#" class="button primary scrolly">Download</a></li>
+					<p></p>
+					<li><a href="https://www.linkedin.com/in/mateusbackhaus"><img src="images/linkedin.png" width="70%" height="70%"></a></li>	
+				</ul>
+				
 
 
 				<a href="#footer" class="goto-next scrolly">Next</a>
@@ -197,6 +202,7 @@
 					<div class="col-12">
 						<ul class="actions special">
 							<li><input type="submit" value="Send Message" class="primary" /></li>
+							
 						</ul>
 					</div>
 				</div>
