--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<div class="content">
 				<header class="major">				
 					<h2>Projects</h2>
-					<p>More than a profession Developing technology is my hobby. Here I share some of the projects i've been lately working on. </p>
+					<p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p>
 				</header>
 
 			<!-- Slideshow container -->
