--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 			<div class="content">
 				<header class="major">				
 					<h2>Projects</h2>
+					<p></p>
 					<p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p>
+					<p></p>
 				</header>
 
 			<!-- Slideshow container -->
@@ -144,7 +146,7 @@
 
 				<div class="mySlides fade">
 					<img class="projectImages" src="images/fiori_app.jpg" width="450px" height="300px">
-					<p id="sliderText">Creating three fiori apps</p>
+					<p id="sliderText">Creating three fiori apps to manage a mechanic shop</p>
 				</div>
 
 				<!-- Next and previous buttons -->
@@ -173,12 +175,10 @@
 				<header class="major"></header>
 					<h2>Curriculum</h2>
 				</header>
-				<ul class="actions special">
-					<li><a href="#" class="button primary scrolly">Download</a></li>
+
+					<a href="#" class="button primary scrolly">Download</a>
 					<p></p>
-					<li><a href="https://www.linkedin.com/in/mateusbackhaus"><img src="images/linkedin.png" width="70%" height="70%"></a></li>	
-				</ul>
-				
+					<a href="https://www.linkedin.com/in/mateusbackhaus"><img src="images/linkedin.png" width="70%" height="70%"></a>
 
 
 				<a href="#footer" class="goto-next scrolly">Next</a>
