--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 			<ul class="copyright">
 				<li>&copy; All rights reserved</li>
 				<li>Design: <a href="#">Mateus Backhaus</a></li>
+				<li>Site in development</li>
 			</ul>
 		</footer>
 	</section>
