--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 					<h2>Projects</h2>
 					<p></p>
 					<p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p>
+					<p>( Soon you will be able to see more details about those projects like code, images, videos and so on )</p>
 					<p></p>
 				</header>
 
