--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 					<div class="containerT left">
 					  <div class="contentT">
 						<h2>2018</h2>
-						<p>Got certificated in Lean Six Sigma Green Belt after learning methods and tools to manage processes and delivering a project which consisted of analysing, controlling and maintaning a real process in the company.</p>
+						<p>Got certificated in Lean Six Sigma Green Belt after learning methods and tools to manage processes and delivering a project which consisted of analysing, controlling and maintaining a real process in the company.</p>
 					  </div>
 					</div>
 					<div class="containerT right">
 					  <div class="contentT">
 						<h2>2021</h2>
-						<p>Decided to chase my vocation in Technology Development I entered the SAP business, becoming a Full Stack SAP Developer, with one goal: studying technologies that improve companies processes and efficiency.</p>
+						<p>Decided to chase my vocation in technology development I entered the SAP business, becoming a Full Stack SAP Developer, with one goal: studying technologies that improve companies processes and efficiency.</p>
 					  </div>
 					</div>
 				  </div>
@@ -124,7 +124,6 @@
 					<h2>Projects</h2>
 					<p></p>
 					<p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p>
-					<p>( Soon you will be able to see more details about those projects like code, images, videos and so on )</p>
 					<p></p>
 				</header>
 
@@ -177,7 +176,7 @@
 					<h2>Curriculum</h2>
 				</header>
 
-					<a href="#" class="button primary scrolly">Download</a>
+					<a href="#" class="buttond">Download</a>
 					<p></p>
 					<a href="https://www.linkedin.com/in/mateusbackhaus"><img src="images/linkedin.png" width="35%" height="45%"></a>
 
@@ -223,6 +222,7 @@
 				<li>&copy; All rights reserved</li>
 				<li>Design: <a href="#">Mateus Backhaus</a></li>
 				<li>Site in development</li>
+				<li>may contain bugs and translate mistakes</li>
 			</ul>
 		</footer>
 	</section>
