--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<li>&copy; All rights reserved</li>
 				<li>Design: <a href="#">Mateus Backhaus</a></li>
 				<li>Site in development</li>
-				<li>may contain bugs and translate mistakes</li>
+				<li>May contain bugs and translation errors</li>
 			</ul>
 		</footer>
 	</section>
