--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 				<div class="mySlides fade">
 					<img class="projectImages" src="images/fiori_app.jpg" width="450px" height="300px">
-					<p id="sliderText">Creating three fiori apps to manage a mechanic shop</p>
+					<p id="sliderText">Creating Fiori apps on SAPUI5</p>
 				</div>
 
 				<!-- Next and previous buttons -->
