--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 				<header class="major">				
 					<h2>Projects</h2>
 					<p></p>
-					<p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p>
+					<!-- <p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p> -->
+					
 					<p></p>
 				</header>
 
