--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="containerT right">
 					  <div class="contentT">
 						<h2>2014</h2>
-						<p>Started working as Biomedical Equipment Technician providing technical support for two hospitals ultil 2021. Great enverioment to learn how to work under pressure and get sense of responsibility. </p>
+						<p>Started working as Biomedical Equipment Technician providing technical support for two hospitals ultil 2021. Great enverioment to learn how to work under pressure. </p>
 					  </div>
 					</div>
 					<div class="containerT left">
@@ -103,7 +103,7 @@
 					<div class="containerT right">
 					  <div class="contentT">
 						<h2>2021</h2>
-						<p>Decided to chase my vocation in technology development I entered the SAP business, becoming a Full Stack SAP Developer, with one goal: studying technologies that improve companies processes and efficiency.</p>
+						<p>Decided to chase my vocation in technology development I started to learn SAP enverioment, looking for technologies that improve companies processes and efficiency.</p>
 					  </div>
 					</div>
 				  </div>
@@ -122,10 +122,8 @@
 			<div class="content">
 				<header class="major">				
 					<h2>Projects</h2>
-					<p></p>
+					<p>(soon)</p>
 					<!-- <p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p> -->
-					
-					<p></p>
 				</header>
 
 			<!-- Slideshow container -->
