--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 
 	<section id="footer">
 		<div class="container">
-			<header class="major">
+			<!--<header class="major">
 				<h2>Get in touch</h2>
 			</header>
-			<!-- <form method="post" action="mailto:mateus.bks@hotmail.com">
+			 <form method="post" action="mailto:mateus.bks@hotmail.com">
 				<div class="row gtr-uniform">
 					<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" />
 					</div>
