--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 
 	<section id="footer">
 		<div class="container">
-			<!--<header class="major">
+			<header class="major">
 				<h2>Get in touch</h2>
 			</header>
-			 <form method="post" action="mailto:mateus.bks@hotmail.com">
+			<form method="post" action="mailto:mateus.bks@hotmail.com">
 				<div class="row gtr-uniform">
 					<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" />
 					</div>
@@ -206,7 +206,7 @@
 					</div>
 				</div>
 			</form>
-		</div> -->
+		</div>
 		<footer>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/mateusbackhaus" class="icon brands alt fa-linkedin"><span
@@ -222,6 +222,7 @@
 				<li>Design and development: <a href="#">Mateus Backhaus</a></li>
 			</ul>
 		</footer>
+		</div>
 	</section>
 
 	<!-- Scripts -->
