--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 					<div class="containerT left">
 					  <div class="contentT">
 						<h2>2009</h2>
-						<p>Started studying Eletronics and got the certificate in 2013.</p>
+						<p>Started studying Eletronics and got certificated in 2013.</p>
 					  </div>
 					</div>
 					<div class="containerT right">
 					  <div class="contentT">
 						<h2>2012</h2>
-						<p>Commenced english course at Yazigi and got certificated by 2017.</p>
+						<p>Commenced learning english at Yazigi and got certificated by 2017.</p>
 					  </div>
 					</div>
 					<div class="containerT left">
@@ -97,7 +97,7 @@
 					<div class="containerT left">
 					  <div class="contentT">
 						<h2>2018</h2>
-						<p>Got certificated in Lean Six Sigma Green Belt after learning methods and tools to manage processes and delivering a project which consisted of analysing, controlling and maintaining a real process in the company.</p>
+						<p>Got certificated in Lean Six Sigma Green Belt after learning methods and tools to manage processes and delivering a project that consisted of analysing, controlling and maintaining a real process in the company.</p>
 					  </div>
 					</div>
 					<div class="containerT right">
@@ -123,7 +123,7 @@
 				<header class="major">				
 					<h2>Projects</h2>
 					<p>(soon)</p>
-					<!-- <p>More than a profession Developing technology is my hobby. Here are some of the projects i've been lately working on. </p> -->
+					<!-- <p>Here are some of the projects i've been lately working on. </p> -->
 				</header>
 
 			<!-- Slideshow container -->
