--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="containerT right">
 					  <div class="contentT">
 						<h2>2014</h2>
-						<p>Started working as Biomedical Equipment Technician providing technical support for two hospitals ultil 2021. Great enverioment to learn how to work under pressure. </p>
+						<p>Started working as Biomedical Equipment Technician providing technical support for two hospitals until 2021. Great enverioment to learn how to work under pressure. </p>
 					  </div>
 					</div>
 					<div class="containerT left">
